# stm32f722-dev-board-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  STM32F722RETX_FLASH.ld  STM32F722RETX_RAM.ld  jlink_config.cfg  main.cpp
include/freertos/: FreeRTOSConfig.h
lib/: CMakeLists.txt
lib/cmsis_core/: CMakeLists.txt
lib/cmsis_device_f7/: CMakeLists.txt
lib/freertos/: CMakeLists.txt
src/: CMakeLists.txt  clock.c  clock.h  gpio.c  gpio.h  main.c
toolchains/: arm_gcc_toolchain.cmake
